--- a/personal-react-website/src/pages/MainPage.css
+++ b/personal-react-website/src/pages/MainPage.css
@@ -1,29 +1,35 @@
 .main-page-video > video {
-    width: 100% !important;
-    height: auto !important;
+  width: 100% !important;
+  height: auto !important;
 }
 
 .main-page-self-image {
-    height: 38px;
-    width: 100%;
-    display: grid;
-    grid-template-columns: 1fr 20px 1fr;
-    grid-template-rows: 1fr;
-    background-color: rgb(255, 255, 255);
-  }
-  
-  hr {
-    margin: auto 20px;
-    border: 1.5px solid rgb(150, 150, 150);
-  }
-  
-  .text {
-    margin: auto 0;
-    font-size: 22px;
-    color: rgb(175, 175, 175);
-  }
+  height: 38px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 20px 1fr;
+  grid-template-rows: 1fr;
+  background-color: rgb(255, 255, 255);
+}
 
-  .image-wrapper{
-      display: inline-block;
-      transform: translate(-100px, 0%);
-  }
+hr {
+  margin: auto 20px;
+  border: 1.5px solid rgb(150, 150, 150);
+}
+
+.text {
+  margin: auto 0;
+  font-size: 22px;
+  color: rgb(175, 175, 175);
+}
+
+.image-wrapper {
+  display: inline-block;
+  transform: translate(-100px, 0%);
+}
+
+.main-page-fixed-icons {
+  position: fixed;
+  right: 220px;
+  top: 150px;
+}
