--- a/personal-react-website/src/pages/MainPage.css
+++ b/personal-react-website/src/pages/MainPage.css
@@ -33,3 +33,21 @@ hr {
   right: 220px;
   top: 150px;
 }
+
+p {
+  color: rgb(107 114 128);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-size: 1rem;
+}
+
+a {
+  color: rgb(107 114 128);
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+  font-size: 1rem;
+}
+
+a:hover {
+  color: rgb(55 65 81);
+}
